--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <img src="Imagenes/bx-menu-alt-left.svg" alt="" class="hamburguer">
         <div class="logo-investing">
-            <img src="Imagenes/pexels-fauxels-copia.jpg" alt="" class="investing lazyload" loading="lazy">
+            <img src="Imagenes/Logo_Trust_Investing.png" alt="" class="investing lazyload" loading="lazy">
         </div>
         <div class="textos">
             <h1 class="titulo">Trust Investing</h1>
